--- a/backend/Makefile
+++ b/backend/Makefile
@@ -4,3 +4,6 @@ install:
 run-dev:
 	python3 manage.py migrate --settings=dashyserver.settings.dev
 	python3 manage.py runserver --settings=dashyserver.settings.dev 0.0.0.0:8000
+
+build:
+	npm run build
