--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "start": "npm run build-config && concurrently 'npm run server' 'npm run client-dev'",
     "build": "react-scripts build && npm run delete-map-files",
     "delete-map-files": "find ./build -name '*.map' -delete",
-    "lint": "eslint --ext jsx,js ./src ./server ./config --fix",
+    "lint": "eslint --ext jsx,js ./src --fix",
     "postinstall": "cp ../.github/hooks/* ../.git/hooks/",
     "test": "npm run build-config && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
