Refactor frontend to use configurations instead of specialized components for tiles(#17)
* Update eslint and add python3-pip to backend dependencies

* Prototype model for weather tile

* Add fixtures to populate dev envrionment

* Remove abnormally high height settings

* Add Transpo and Openweathermap tiles as configurations built by Tile component

* Convert CalendarTile to config

* Added Instagram and Gallery Tiles

* Added default value for transpo tile config

* Removed unused tiles that are replaced by config

* Fixed linting errors + added defaults

* Merged EmptyTile to TileFrame

* Replace color field with React CSS properties

* Fix loading boolean value

* Add styled-components

* Add package-lock.json

* Added missing node packages

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,18 @@
 install:
 	scripts/install.sh
 
+create-local-admin:
+	python3 manage.py createsuperuser --settings=dashyserver.settings.dev
+
+db-flush:
+	python3 manage.py flush --settings=dashyserver.settings.dev
+
+db-populate:
+	python3 manage.py makemigrations --settings=dashyserver.settings.dev
+	python3 manage.py migrate --settings=dashyserver.settings.dev
+	python3 manage.py loaddata fixtures/credentials --settings=dashyserver.settings.dev
+
+
 run-dev:
 	python3 manage.py makemigrations --settings=dashyserver.settings.dev
 	python3 manage.py migrate --settings=dashyserver.settings.dev
