--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -16,6 +16,7 @@ whitenoise = "==3.3.1"
 gunicorn = "*"
 dj-database-url = "*"
 django-heroku = "*"
+pyyaml = "*"
 
 [requires]
 python_version = "3.5"
