--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci --prefix frontend
+    - run: npm run lint --if-present --prefix frontend
     - run: npm run build --if-present --prefix frontend
       env:
         CI: true
