Movie tile configurations to backend (#19)
Refactor configurations into tile, layout, and service that's loaded from the backend into the frontend

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -9,7 +9,7 @@ db-flush:
 
 db-populate:
 	python3 manage.py makemigrations --settings=dashyserver.settings.dev
-	python3 manage.py migrate --settings=dashyserver.settings.dev
+	python3 manage.py migrate --settings=dashyserver.settings.dev --run-syncdb
 	python3 manage.py loaddata fixtures/credentials --settings=dashyserver.settings.dev
 
 
