--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
+    "@types/moment": "^2.13.0",
     "@types/node": "^13.7.7",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
